force-app/main/default/objects/Financial_Account__c/Financial_Account__c.object-meta.xml
<CustomObject>
    <description>Representa una tarjeta de crédito emitida a un cliente como resultado de una oportunidad ganada, incluyendo información relevante como línea de crédito aprobada, estado, producto asociado y datos de emisión.</description>
    <label>Cuenta Financiera</label>
    <nameField>
        <label>Cuenta Financiera Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuentas Financieras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>