force-app/main/default/objects/Financial_Account__c/fields/Approved_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Credit_Limit__c</fullName>
    <description>Indica el monto total de línea de crédito aprobado para el cliente tras la evaluación crediticia.</description>
    <inlineHelpText>Ingrese el monto de la línea de crédito aprobada para la tarjeta.</inlineHelpText>
    <label>Línea de Crédito Aprobada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>