force-app/main/default/objects/Financial_Account__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <description>Almacena el número de tarjeta de crédito asociado a la cuenta financiera. Este campo contiene información sensible y debe tener acceso restringido según el rol del usuario.</description>
    <inlineHelpText>Ingrese el número de la tarjeta asignada al cliente. Este campo es confidencial y puede estar restringido según su perfil.</inlineHelpText>
    <label>Numero de tarjeta</label>
    <length>29</length>
    <type>Text</type>
</CustomField>