force-app/main/default/objects/Financial_Account__c/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <description>Indica el estado actual de la tarjeta dentro del sistema.</description>
    <inlineHelpText>Seleccione el estado actual de la tarjeta.</inlineHelpText>
    <label>Estado de la Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Bloqueada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>