force-app/main/default/objects/Financial_Account__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Define la categoría o tipo de tarjeta de crédito asignada al cliente.</description>
    <inlineHelpText>Seleccione el tipo de tarjeta de crédito correspondiente.</inlineHelpText>
    <label>Tipo de Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
                <default>true</default>
                <label>Visa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>