force-app/main/default/objects/Financial_Account__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas Financieras</relationshipLabel>
    <relationshipName>Cuentas_Financieras</relationshipName>
    <type>Lookup</type>
</CustomField>