force-app/main/default/objects/Financial_Account__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>Representa la fecha en la que la tarjeta de crédito fue emitida al cliente.</description>
    <inlineHelpText>Seleccione la fecha en que se emitió la tarjeta.</inlineHelpText>
    <label>Fecha de Emisión</label>
    <type>Date</type>
</CustomField>