force-app/main/default/objects/Financial_Account__c/fields/Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits__c</fullName>
    <description>Almacena los últimos cuatro dígitos de la tarjeta para fines de identificación sin exponer información sensible.</description>
    <inlineHelpText>Ingrese los últimos cuatro dígitos de la tarjeta.</inlineHelpText>
    <label>Últimos 4 Dígitos</label>
    <length>4</length>
    <type>Text</type>
</CustomField>