force-app/main/default/objects/Financial_Account__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto Financiero</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cuentas Financieras</relationshipLabel>
    <relationshipName>Cuentas_Financieras</relationshipName>
    <type>Lookup</type>
</CustomField>